k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-app
  namespace: default
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - server.mackbook.com
    secretName: server-mackbook-tls
  rules:
  - host: server.mackbook.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: python-app
            port:
              number: 8080
      - path: /api/v1/info
        pathType: Prefix
        backend:
          service:
            name: python-app
            port:
              number: 8080
      - path: /api/v1/healthz
        pathType: Prefix
        backend:
          service:
            name: python-app
            port:
              number: 8080
